--- a/taui/src/index.css
+++ b/taui/src/index.css
@@ -35,6 +35,7 @@ html, body {
                "Helvetica Neue",
                sans-serif;
   color: var(--dark-blue);
+  background-color: lightgray;
 }
 
 .Taui-Map {
@@ -288,12 +289,25 @@ table.CardContent td:first-of-type {
 
 .Logo {
   background: url(/src/BHAlogo.png) no-repeat;
-  width: 5rem;
-  padding: 1rem 1rem 2rem 2rem;
+  width: 100%
+  padding-top: 5rem;
   background-size: 4rem;
-  background-position: left;
-  background-position-x: left;
+  background-position: center;
+  background-position-x: center;
   background-position-y: center;
+}
+
+.Splash {
+  text-align: center;
+}
+
+.Splash-Box {
+  background-color: white;
+  width: 40%;
+  margin-left: 30%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  align-content: center;
 }
 
 .Popup button {
