--- a/taui/src/index.css
+++ b/taui/src/index.css
@@ -51,7 +51,6 @@ html, body {
 
 .Taui-Dock {
   background-color: var(--dark-blue);
-  position: absolute;
   width: 414px;
   top: 0;
   left: 0;
@@ -289,12 +288,20 @@ table.CardContent td:first-of-type {
 
 .Logo {
   background: url(/src/BHAlogo.png) no-repeat;
-  width: 100%
+  width: 100%;
   padding-top: 5rem;
   background-size: 4rem;
   background-position: center;
   background-position-x: center;
   background-position-y: center;
+}
+
+.LogoNavbar {
+  background: url(/src/BHAlogo.png) no-repeat;
+  background-size: 4rem;
+  width: 10rem;
+  height: 3rem;
+  text-align: right;
 }
 
 .Splash {
@@ -303,18 +310,15 @@ table.CardContent td:first-of-type {
   margin-right: 20%;
 }
 
-.Splash h1, h2, h3, h4 {
-  margin-top: 0;
-  margin-bottom: 0;
+.SplashBoxHeader {
+  text-align: left;
 }
 
-.Splash-Box {
+.SplashBox {
   background-color: white;
-  width: 40%;
-  margin-left: 30%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   align-content: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .Popup button {
