--- a/taui/src/sass/01_settings/_color.scss
+++ b/taui/src/sass/01_settings/_color.scss
@@ -1,6 +1,6 @@
 $white: #fff;
 $gray-50: #fafafa;
-$gray-100: #f5c5f5;
+$gray-100: #f5f5f5;
 $gray-200: #eee;
 $gray-300: #e0e0e0;
 $gray-400: #bdbdbd;
@@ -14,6 +14,7 @@ $black: #000;
 $bg-gray: #ecedef;
 
 $brand-blue: #15369d;
+$error: #9d3715;
 
 $font-colors: (
     light: $gray-600,
