--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -10,6 +10,8 @@
 '04_reset/_link.scss',
 '04_reset/_reset.scss',
 '05_base/_base.scss',
-'06_components/_app-header.scss';
-// '07_layouts/_foo.scss',
+'06_components/_app-header.scss',
+'06_components/_account-search.scss',
+'06_components/_account-list.scss',
+'07_layouts/_form-screen.scss';
 // '08_overrides/_foo.scss',
