--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -10,8 +10,10 @@
 '04_reset/_link.scss',
 '04_reset/_reset.scss',
 '05_base/_base.scss',
+'06_components/_auth-header.scss',
 '06_components/_app-header.scss',
 '06_components/_account-search.scss',
 '06_components/_account-list.scss',
+'07_layouts/_auth-screen.scss',
 '07_layouts/_form-screen.scss';
 // '08_overrides/_foo.scss',
