Add header links to search and profile pages
Closes #31.

--- a/taui/src/sass/06_components/_app-header.scss
+++ b/taui/src/sass/06_components/_app-header.scss
@@ -14,6 +14,11 @@
     margin-right: 8rem;
   }
 
+  &__button {
+    margin-left: 1.6rem;
+    margin-right: 1.6rem;
+  }
+
   &__logo {
     flex: none;
     height: 3.2rem;
