--- a/taui/src/taui.css
+++ b/taui/src/taui.css
@@ -3,6 +3,15 @@
 @import url(../node_modules/react-virtualized-select/styles.css);
 @import url(./components/log/style.css);
 
+/** Firefox workaround for https://github.com/Leaflet/Leaflet/issues/4686 */
+.leaflet-fade-anim .leaflet-tile {
+  will-change: auto !important;
+}
+
+.leaflet-zoom-anim .leaflet-zoom-animated {
+  will-change: auto !important;
+}
+
 /** Colors from https://palx.jxnblk.com/2389c9 **/
 
 :root {
