--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -1,20 +1,19 @@
 @import
-'01_settings/_color.scss',
-'01_settings/_type.scss',
-'01_settings/_variables.scss',
-'02_tools/_functions.scss',
-'02_tools/_mixins.scss',
-'03_vendors/_focus-visible.scss',
-'03_vendors/_include-media.scss',
-'04_reset/_button.scss',
-'04_reset/_link.scss',
-'04_reset/_reset.scss',
-'05_base/_base.scss',
-'06_components/_auth-header.scss',
-'06_components/_app-header.scss',
-'06_components/_account-profile.scss',
-'06_components/_account-search.scss',
-'06_components/_account-list.scss',
-'07_layouts/_auth-screen.scss',
-'07_layouts/_form-screen.scss';
-// '08_overrides/_foo.scss',
+'01_settings/color.scss',
+'01_settings/type.scss',
+'01_settings/variables.scss',
+'02_tools/functions.scss',
+'02_tools/mixins.scss',
+'03_vendors/focus-visible.scss',
+'03_vendors/include-media.scss',
+'04_reset/button.scss',
+'04_reset/link.scss',
+'04_reset/reset.scss',
+'05_base/base.scss',
+'06_components/auth-header.scss',
+'06_components/app-header.scss',
+'06_components/account-profile.scss',
+'06_components/account-search.scss',
+'06_components/account-list.scss',
+'07_layouts/auth-screen.scss',
+'07_layouts/form-screen.scss';
