--- a/taui/src/sass/06_components/_app-header.scss
+++ b/taui/src/sass/06_components/_app-header.scss
@@ -15,8 +15,14 @@
   }
 
   &__button {
-    margin-left: 1.6rem;
+    @include text(300);
     margin-right: 1.6rem;
+    margin-left: 1.6rem;
+    color: $gray-600;
+
+    &--new {
+      margin-left: 6.4rem;
+    }
   }
 
   &__logo {
@@ -26,12 +32,12 @@
   }
 
   &__app-name {
-    flex: none;
     @include heading(500);
+    flex: none;
   }
 
   &__user-info {
-    @include heading(400);
+    @include text(400);
   }
 
   &__user-name {
@@ -39,7 +45,7 @@
   }
 
   &__voucher-number {
-    @include font-weight(normal);
+    margin-right: 1.6rem;
   }
 
   &__actions {
