--- a/taui/src/sass/06_components/_app-header.scss
+++ b/taui/src/sass/06_components/_app-header.scss
@@ -3,8 +3,8 @@
   flex-flow: row nowrap;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 1.6rem;
-  padding: 0.8rem 2.4rem;
+  height: 6.4rem;
+  padding: 0 2.4rem 0.8rem;
 
   &__brand {
     display: flex;
