--- a/taui/src/sass/07_layouts/_form-screen.scss
+++ b/taui/src/sass/07_layouts/_form-screen.scss
@@ -3,6 +3,7 @@
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: stretch;
+  min-width: 64rem;
   max-width: 80rem;
   margin: 4rem auto;
 
