Style sidebar layout

--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -15,6 +15,7 @@
 '06_components/account-profile.scss',
 '06_components/account-search.scss',
 '06_components/account-list.scss',
+'06_components/map-sidebar.scss',
 '07_layouts/app-root.scss',
 '07_layouts/auth-screen.scss',
 '07_layouts/form-screen.scss',
