--- a/taui/src/sass/07_layouts/_app-root.scss
+++ b/taui/src/sass/07_layouts/_app-root.scss
@@ -4,6 +4,9 @@
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: stretch;
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
 
   > .app-header {
     flex: none;
