--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -16,6 +16,7 @@
 '06_components/account-search.scss',
 '06_components/account-list.scss',
 '06_components/map-sidebar.scss',
+'06_components/neighborhood-summary.scss',
 '07_layouts/app-root.scss',
 '07_layouts/auth-screen.scss',
 '07_layouts/form-screen.scss',
