--- a/taui/src/sass/06_components/_neighborhood-summary.scss
+++ b/taui/src/sass/06_components/_neighborhood-summary.scss
@@ -3,7 +3,7 @@
   margin-bottom: 1.6rem;
   padding: 0 0.8rem 0.8rem;
   background-color: $white;
-  border-top: 4px solid transparent;
+  border-top: 6px solid transparent;
   cursor: pointer;
 
   &__header {
@@ -12,7 +12,7 @@
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
-    padding: 0.8rem 0;
+    padding: 0.6rem 0 0.8rem;
   }
 
   &__star {
@@ -32,6 +32,50 @@
   }
 
   &__contents {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  &__descriptive {
+    flex: none;
+    margin-right: 2.4rem;
+    margin-left: 0.8rem;
+  }
+
+  &__image {
+    width: 12rem;
+  }
+
+  &__trip {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  &__duration {
+    @include text(400);
+  }
+
+  &__trajectory {
+    @include text(200);
+    color: $gray-500;
+  }
+
+  &__location {
+    @include font-weight(bold);
+  }
+
+  &__facts {
     @include text(300);
+    flex: auto;
+    table-layout: fixed;
+  }
+
+  &__cell {
+    width: 50%;
+    padding-bottom: 0.6rem;
   }
 }
