Style map markers

--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -15,6 +15,7 @@
 '06_components/account-profile.scss',
 '06_components/account-search.scss',
 '06_components/account-list.scss',
+'06_components/map.scss',
 '06_components/map-sidebar.scss',
 '06_components/neighborhood-summary.scss',
 '06_components/neighborhood-details.scss',
