--- a/taui/src/sass/06_components/_map.scss
+++ b/taui/src/sass/06_components/_map.scss
@@ -15,5 +15,13 @@
         border-top: 20px solid $green;
       }
     }
+
+    &--other {
+      background-color: $brand-blue;
+
+      &::before {
+        border-top: 20px solid $brand-blue;
+      }
+    }
   }
 }
