--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -61,6 +61,13 @@
     margin-bottom: 1.6rem;
   }
 
+  &__image {
+    img {
+      height: 83px;
+      width: 110px;
+    }
+  }
+
   &__image:not(:last-of-type) {
     margin-right: 1.6rem;
   }
