Add importance options to user profile
Add three dropdown inputs to user profile page to set importance for weighting.
(Weighting changes to be implemented separately.)

Closes #122.

--- a/taui/src/sass/06_components/_account-profile.scss
+++ b/taui/src/sass/06_components/_account-profile.scss
@@ -44,6 +44,10 @@
       width: 12rem;
     }
 
+    &--wide-select {
+      width: 24rem;
+    }
+
     &--checkbox,
     &--radio {
       width: 1.6rem;
