--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -90,8 +90,8 @@
     @include text(200);
     margin-top: -0.8rem;
     margin-bottom: 1.6rem;
-    padding: 0.4rem 0.8rem;
-    line-height: 2;
+    padding: 0.8rem;
+    line-height: 2.4;
     background-color: $gray-100;
   }
 }
