--- a/taui/src/taui.css
+++ b/taui/src/taui.css
@@ -192,10 +192,11 @@ table.CardContent td:first-of-type {
 }
 
 .CardSegment {
-  font-size: 0.75rem;
-  padding: 0 0.25rem;
+  font-size: 1rem;
+  line-height: 2;
+  padding: 0 0.5rem;
   border-radius: var(--rad);
-  margin-right: 0.25rem;
+  margin-right: 0.4rem;
   white-space: nowrap;
   display: inline-block;
 }
