--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -37,19 +37,18 @@
   }
 
   &__links {
-    @include text(200);
+    @include text(300);
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
+    flex-flow: row wrap;
+    justify-content: space-between;
     align-items: center;
-    margin-bottom: 1.6rem;
+    margin-bottom: 2.4rem;
   }
 
   &__link {
     @include link-states() {
       color: $brand-blue;
     }
-    @include font-weight(bold);
     margin-right: auto;
   }
 
