--- a/taui/src/sass/06_components/_account-profile.scss
+++ b/taui/src/sass/06_components/_account-profile.scss
@@ -13,9 +13,10 @@
     &--inline {
       flex-direction: row;
       align-items: center;
+      margin-bottom: 0;
 
       > *:not(:last-child) {
-        margin-right: 1.6rem;
+        margin-right: 0.8rem;
         margin-bottom: 0;
       }
     }
@@ -24,6 +25,17 @@
       justify-content: space-between;
       max-width: 40rem;
       margin: 2.4rem 0;
+    }
+  }
+
+  &__field-row {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+
+    > *:not(:last-child) {
+      margin-right: 2.4rem;
     }
   }
 
