Overhaul result card facts
- Replace schools and safety textual values with graphical meters
- Meters have temporary hard-coded values for now
- Remove overall score
- Add rental units (provisional format for now)

--- a/taui/src/sass/01_settings/_color.scss
+++ b/taui/src/sass/01_settings/_color.scss
@@ -23,3 +23,9 @@ $font-colors: (
     normal: $gray-800,
     dark: $black,
 );
+
+$meter-track: #e0e0e0;
+$meter-fill-high: #7cd193;
+$meter-fill-med: #ffee92;
+$meter-fill-low: #fedca0;
+$meter-average: rgba(#000, 0.8);
