--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -17,6 +17,7 @@
 '06_components/account-list.scss',
 '06_components/map.scss',
 '06_components/map-sidebar.scss',
+'06_components/meter.scss',
 '06_components/neighborhood-summary.scss',
 '06_components/neighborhood-details.scss',
 '07_layouts/app-root.scss',
