--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -1,24 +1,35 @@
 .neighborhood-details {
   margin-bottom: 1.6rem;
-  padding: 0 0.8rem 0.8rem;
-  background-color: $white;
+
+  &__section {
+    margin-bottom: 0.8rem;
+    padding: 1.6rem 1.6rem;
+    background-color: $white;
+  }
 
   &__header {
-    @include heading(500);
+    @include heading(400);
     @include font-weight(bold);
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
-    padding: 0.6rem 0 0.8rem;
   }
 
   &__star {
+    flex: none;
     margin-right: 0.8rem;
     font-size: 1.8rem !important;
   }
 
+  &__name {
+    flex: auto;
+    margin-right: 0.8rem;
+    line-height: 1.5;
+  }
+
   &__marker {
+    flex: none;
     width: auto !important;
     margin-left: auto;
     color: $green;
@@ -26,42 +37,58 @@
   }
 
   &__trip {
-    @include text(200);
+    @include text(300);
     @include font-weight(bold);
-    margin-bottom: 1.6rem;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   &__directions {
-    @include font-weight(normal);
     @include link-states() {
       color: $brand-blue;
     }
-
-    &::before {
-      content: ' – ';
-    }
+    margin-left: auto;
   }
 
-  &__desc {
+  .route-segments {
     @include text(200);
-    margin-bottom: 1.6rem;
-    color: $gray-800;
+    margin-top: 0.6rem;
+    line-height: 2.4;
   }
 
-  &__links {
-    @include text(300);
+  &__stats {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2.4rem;
+    align-items: stretch;
+    width: 100%;
   }
 
-  &__link {
-    @include link-states() {
-      color: $brand-blue;
-    }
-    margin-right: auto;
+  &__rent {
+    flex: none;
+    margin-right: 0.8rem;
+    padding-top: 0.4rem;
+    padding-right: 1.6rem;
+    text-align: center;
+    border-right: 4px solid $bg-gray;
+  }
+
+  &__rent-label {
+    @include text(300);
+    margin-bottom: 0.8rem;
+  }
+
+  &__rent-value {
+    @include text(500);
+    @include font-weight(bold);
+    margin-bottom: 0.8rem;
+  }
+
+  &__rent-rooms {
+    @include text(300);
+    @include font-weight(bold);
   }
 
   &__images {
@@ -69,7 +96,7 @@
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: flex-start;
-    margin-bottom: 1.6rem;
+    margin-bottom: 0.8rem;
   }
 
   &__image {
@@ -83,24 +110,35 @@
     margin-right: 1.6rem;
   }
 
-  &__facts {
-    @include text(200);
-    @include font-weight(bold);
-    width: 100%;
+  &__desc {
+    @include text(300);
+    color: $gray-800;
   }
 
-  &__row:nth-child(odd) {
-    background-color: $gray-100;
+  &__link-heading {
+    @include heading(300);
+    margin-bottom: 0.8rem;
+
+    &:not(:first-of-type) {
+      margin-top: 2.4rem;
+    }
   }
 
-  &__cell {
-    padding: 0.8rem 0.4rem;
+  &__links {
+    @include text(300);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
   }
 
-  > .route-segments {
-    @include text(200);
-    margin-top: -0.8rem;
-    margin-bottom: 1.6rem;
-    line-height: 2.4;
+  &__link {
+    @include link-states() {
+      color: $brand-blue;
+    }
+
+    &:not(:last-child) {
+      margin-right: 2.4rem;
+    }
   }
 }
