--- a/taui/src/sass/06_components/_neighborhood-summary.scss
+++ b/taui/src/sass/06_components/_neighborhood-summary.scss
@@ -1,7 +1,7 @@
 .neighborhood-summary {
   @include elevation(1);
   margin-bottom: 1.6rem;
-  padding: 0 0.8rem 0.8rem;
+  padding: 0 0.8rem 1.2rem;
   background-color: $white;
   cursor: pointer;
 
@@ -33,7 +33,7 @@
   &__contents {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
     padding: 0 0.8rem;
   }
@@ -72,23 +72,5 @@
 
   &__location {
     @include font-weight(bold);
-  }
-
-  &__facts {
-    @include text(200);
-    flex: auto;
-    table-layout: fixed;
-  }
-
-  &__cell {
-    padding-top: 0.4rem;
-    padding-bottom: 1.2rem;
-    white-space: nowrap;
-    vertical-align: middle;
-
-    &:first-child {
-      padding-right: 0.8rem;
-      text-align: right;
-    }
   }
 }
