--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -18,6 +18,7 @@
 '06_components/map.scss',
 '06_components/map-sidebar.scss',
 '06_components/meter.scss',
+'06_components/neighborhood-facts.scss',
 '06_components/neighborhood-summary.scss',
 '06_components/neighborhood-details.scss',
 '06_components/rental-units-meter.scss',
