--- a/taui/src/sass/06_components/_map-sidebar.scss
+++ b/taui/src/sass/06_components/_map-sidebar.scss
@@ -1,5 +1,8 @@
 .map-sidebar {
   position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: stretch;
   padding: 0 2.4rem 2.4rem;
 
   &__error {
@@ -109,7 +112,8 @@
 
   &__attribution {
     @include text(200);
-    margin-top: 2.4rem;
+    margin-top: auto;
+    padding-top: 3.2rem;
     color: $gray-600;
     text-align: center;
   }
