--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -3,7 +3,7 @@
 
   &__section {
     margin-bottom: 0.8rem;
-    padding: 1.6rem 1.6rem;
+    padding: 1.6rem;
     background-color: $white;
   }
 
