Evolve map polygon visual properties
- Optimize fill opacity, stroke weight and opacity to distinguish
routable neighborhoods from active neighborhood without obscuring
map-level information
- Hide polygons for non-routable neighborhoods
- Rename some color vars in anticipation of possible color changes

--- a/taui/src/sass/06_components/_account-profile.scss
+++ b/taui/src/sass/06_components/_account-profile.scss
@@ -176,7 +176,7 @@
     height: 4rem;
 
     &--primary {
-      @include button($color: $white, $background: $brand-blue);
+      @include button($color: $white, $background: $primary);
       @include light-on-dark();
       @include font-weight(bold);
       min-width: 16rem;
@@ -189,7 +189,7 @@
 
     &--tertiary {
       margin-left: auto;
-      color: $brand-blue;
+      color: $primary;
     }
 
     &--iconLeft {
