--- a/taui/src/sass/06_components/_account-search.scss
+++ b/taui/src/sass/06_components/_account-search.scss
@@ -55,7 +55,7 @@
     height: 4rem;
 
     &--search {
-      @include button($color: $white, $background: $brand-blue);
+      @include button($color: $white, $background: $primary);
       @include light-on-dark();
       @include font-weight(bold);
     }
