--- a/taui/src/sass/06_components/_map-sidebar.scss
+++ b/taui/src/sass/06_components/_map-sidebar.scss
@@ -48,7 +48,7 @@
 
   &__navigation-button {
     @include heading(300);
-    color: $brand-blue;
+    color: $primary;
 
     > *:first-child {
       margin-right: 0.6rem;
