--- a/taui/src/sass/01_settings/_color.scss
+++ b/taui/src/sass/01_settings/_color.scss
@@ -13,8 +13,8 @@ $black: #000;
 
 $bg-gray: #ecedef;
 
-$brand-blue: #15369d;
-$green: #159d37;
+$primary: #15369d;
+$active: #159d37;
 
 $error: #9d3715;
 
