--- a/taui/src/taui.css
+++ b/taui/src/taui.css
@@ -295,6 +295,7 @@ table.CardContent td:first-of-type {
   top: 5px;
   left: 5px;
   border: solid 5px #fff;
+  border-radius: 50%;
 }
 
 .LeafletIcon.Other {
