--- a/taui/src/sass/01_settings/_color.scss
+++ b/taui/src/sass/01_settings/_color.scss
@@ -25,7 +25,7 @@ $font-colors: (
 );
 
 $meter-track: #e0e0e0;
-$meter-fill-high: #7cd193;
-$meter-fill-med: #ffee92;
-$meter-fill-low: #fedca0;
-$meter-average: rgba(#000, 0.8);
+$meter-fill-high: #92c980;
+$meter-fill-med: #b4c77a;
+$meter-fill-low: #c9b67e;
+$meter-average: rgba(#fff, 0.8);
