--- a/taui/src/sass/06_components/_neighborhood-facts.scss
+++ b/taui/src/sass/06_components/_neighborhood-facts.scss
@@ -17,4 +17,16 @@
     padding-top: 0.6rem;
     padding-bottom: 0.8rem;
   }
+
+  &__text {
+    text-align: left;
+    vertical-align: middle;
+    padding-top: 0.6rem;
+    padding-bottom: 0.8rem;
+    padding-right: 0.8rem;
+
+    a {
+      text-decoration: underline;
+    }
+  }
 }
