Make chart colors more distinct

--- a/taui/src/sass/01_settings/_color.scss
+++ b/taui/src/sass/01_settings/_color.scss
@@ -26,6 +26,6 @@ $font-colors: (
 
 $meter-track: #e0e0e0;
 $meter-fill-high: #92c980;
-$meter-fill-med: #b4c77a;
-$meter-fill-low: #c9b67e;
+$meter-fill-med: #d4d10c;
+$meter-fill-low: #efb715;
 $meter-average: rgba(#fff, 0.8);
