--- a/taui/src/sass/06_components/_neighborhood-facts.scss
+++ b/taui/src/sass/06_components/_neighborhood-facts.scss
@@ -24,8 +24,12 @@
     padding-bottom: 0.8rem;
     text-align: left;
     vertical-align: middle;
+  }
 
-    a {
+  &__school-choice {
+    font-style: italic;
+
+    &:hover {
       text-decoration: underline;
     }
   }
