Show directions link for transit, too. Remove Google Maps link.

--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -44,15 +44,15 @@
     @include font-weight(bold);
     display: flex;
     flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
   }
 
   &__directions {
     @include link-states() {
       color: $primary;
     }
-    margin-left: auto;
+    margin-left: 1.6rem;
   }
 
   .route-segments {
