Handle wrapping of detail links

--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -143,6 +143,9 @@
       color: $primary;
     }
 
+    line-height: 2;
+    white-space: nowrap;
+
     &:not(:last-child) {
       margin-right: 1.6rem;
     }
