--- a/taui/src/sass/07_layouts/_form-screen.scss
+++ b/taui/src/sass/07_layouts/_form-screen.scss
@@ -17,4 +17,10 @@
     padding: 3.2rem 2.4rem;
     background: $white;
   }
+
+  &__callout {
+    margin-top: 2.4rem;
+    padding: 3.2rem 2.4rem;
+    background: $white;
+  }
 }
