--- a/taui/src/sass/06_components/_rental-units-meter.scss
+++ b/taui/src/sass/06_components/_rental-units-meter.scss
@@ -1,7 +1,10 @@
 .rental-units-meter {
+  position: relative;
+  top: -1px;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+  max-height: 1.8rem;
 
   &__icon {
     color: $meter-track;
