Move client email to profile
Store client email address as a profile field.
Handle client Cognito account creation on profile save.
Store state of client Cognito account on profile for created or confirmed.
Handle existing Cognito account for email on profile save,
and check voucher number for new profile matches Cognito account.

Closes #286.

--- a/taui/src/sass/06_components/_convert-to-account.scss
+++ b/taui/src/sass/06_components/_convert-to-account.scss
@@ -31,6 +31,10 @@
     height: 4rem;
     margin-right: 2.4rem;
     padding: 0 0.8rem;
+
+    &:disabled {
+      background: $bg-gray;
+    }
   }
 
   &__button {
