--- a/taui/src/sass/06_components/_account-profile.scss
+++ b/taui/src/sass/06_components/_account-profile.scss
@@ -76,6 +76,11 @@
       width: 1.6rem;
       height: 1.6rem;
     }
+
+    &:disabled {
+      background-color: $gray-100;
+      border-color: $gray-300;
+    }
   }
 
   &__destinations {
@@ -156,7 +161,7 @@
   &__error {
     @include text(400);
     @include font-weight(bold);
-    margin-top: 2.4rem;
+    margin-bottom: 2.4rem;
     padding: 1.6rem;
     color: $white;
     text-align: center;
@@ -204,5 +209,9 @@
         margin-right: 0.8rem;
       }
     }
+  }
+
+  &__message-sent {
+    @include text(300);
   }
 }
