--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -24,7 +24,10 @@
   &__name {
     @include heading(400);
     @include font-weight(bold);
+    display: flex;
     flex: auto;
+    flex-flow: column nowrap;
+    align-items: flex-start;
     margin-right: 0.8rem;
   }
 
