--- a/taui/src/sass/06_components/_neighborhood-summary.scss
+++ b/taui/src/sass/06_components/_neighborhood-summary.scss
@@ -30,7 +30,10 @@
 
   &__name {
     @include heading(400);
+    display: flex;
     flex: auto;
+    flex-flow: column nowrap;
+    align-items: flex-start;
     margin-right: 0.8rem;
   }
 
