spinner & listings colors & keep bedroom+ listings

--- a/taui/src/sass/06_components/_map.scss
+++ b/taui/src/sass/06_components/_map.scss
@@ -54,5 +54,13 @@
         border-top: 20px solid $primary;
       }
     }
+
+    &--realtor {
+      background-color: $realtor;
+
+      &::before {
+        border-top: 20px solid $realtor;
+      }
+    }
   }
 }
