necessary changes for start of mult language implementation

--- a/taui/src/sass/07_layouts/_app-root.scss
+++ b/taui/src/sass/07_layouts/_app-root.scss
@@ -9,3 +9,15 @@
     flex: none;
   }
 }
+
+.languageSelect {
+  > button {
+    margin-left: 10px;
+    &:hover {
+      color: blue;
+    }
+  }
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+}
