buttons styled without icons, amenity handleClick and handleHover, icon images added, images not loading

--- a/taui/src/sass/07_layouts/_app-root.scss
+++ b/taui/src/sass/07_layouts/_app-root.scss
@@ -21,3 +21,13 @@
   justify-content: space-evenly;
   flex-direction: row;
 }
+
+.amenities-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  font-family: 'Open Sans', sans-serif;
+  .amenities-amenity {
+    padding: 2%;
+  }
+}
