--- a/taui/src/sass/07_layouts/_app-root.scss
+++ b/taui/src/sass/07_layouts/_app-root.scss
@@ -22,16 +22,25 @@
   flex-direction: row;
 }
 
+.amenities-all {
+  display: flex;
+  align-items: center;
+  padding: 0% 2%;
+  p {
+    font-size: 80%;
+    white-space: nowrap;
+  }
+}
+
 .amenities-box {
   display: flex;
-  flex-wrap: wrap;
   font-family: 'Open Sans', sans-serif;
   .amenities-amenity {
     padding: 1%;
     width: 25%;
+    align-items: center;
     .amenities-icon {
-      width: 25%;
-      position: relative;
+      width: 35%;
       top: 1px;
     }
   }
