fixed bug where amenities-bar would dissapear when map clicked

--- a/taui/src/sass/07_layouts/_map-screen.scss
+++ b/taui/src/sass/07_layouts/_map-screen.scss
@@ -15,6 +15,7 @@
 
   > .main-map {
     flex: auto;
-    overflow: hidden;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
 }
