--- a/taui/src/sass/07_layouts/_app-root.scss
+++ b/taui/src/sass/07_layouts/_app-root.scss
@@ -26,6 +26,7 @@
   display: flex;
   align-items: center;
   padding: 0% 2%;
+  z-index: 1000;
   p {
     font-size: 80%;
     white-space: nowrap;
