--- a/taui/src/sass/06_components/_map-sidebar.scss
+++ b/taui/src/sass/06_components/_map-sidebar.scss
@@ -5,6 +5,10 @@
   align-items: stretch;
   padding: 0 2.4rem 2.4rem;
 
+  p {
+    color: #fff;
+  }
+
   &__error {
     @include text(300);
     margin: 1.6rem 0;
