--- a/taui/src/sass/06_components/_map-sidebar.scss
+++ b/taui/src/sass/06_components/_map-sidebar.scss
@@ -5,10 +5,6 @@
   align-items: stretch;
   padding: 0 2.4rem 2.4rem;
 
-  p {
-    color: #fff;
-  }
-
   &__error {
     @include text(300);
     margin: 1.6rem 0;
@@ -112,6 +108,10 @@
     a {
       text-decoration: underline;
     }
+
+    p {
+      color: #fff;
+    }
   }
 
   &__pagination {
@@ -133,6 +133,11 @@
 
     &--strong {
       @include font-weight(bold);
+    }
+
+    &--highlighted {
+      background: #3259a4;
+      color: white;
     }
   }
 
