some basic button style changes

--- a/taui/src/sass/07_layouts/_app-root.scss
+++ b/taui/src/sass/07_layouts/_app-root.scss
@@ -42,8 +42,8 @@
 
   .amenities-amenity {
     align-items: center;
-    width: 25%;
-    padding: 1%;
+    width: 20%;
+    padding: 0% 1.5%;
 
     .amenities-icon {
       top: 1px;
