Style changes for neighborhood cards and neighborhood details

--- a/taui/src/sass/06_components/_map.scss
+++ b/taui/src/sass/06_components/_map.scss
@@ -48,10 +48,10 @@
     }
 
     &--other {
-      background-color: $primary;
+      background-color: #15379d;
 
       &::before {
-        border-top: 20px solid $primary;
+        border-top: 20px solid #15379d;
       }
     }
 
