--- a/taui/src/sass/06_components/_map-sidebar.scss
+++ b/taui/src/sass/06_components/_map-sidebar.scss
@@ -54,11 +54,16 @@
 
   &__navigation-button {
     @include heading(300);
-    color: $primary;
+    color: $black;
 
     > *:first-child {
       margin-right: 0.6rem;
     }
+  }
+
+  &__navigation-chevron-button {
+    color: #02b3cd;
+    font-size: 1.5rem;
   }
 
   &__neighborhoods-header {
