--- a/taui/src/sass/06_components/_neighborhood-facts.scss
+++ b/taui/src/sass/06_components/_neighborhood-facts.scss
@@ -1,13 +1,16 @@
 .neighborhood-facts {
-  @include text(200);
+  @include text(300);
   flex: none;
   table-layout: fixed;
+  // margin-left: 3rem;
 
   &__cell {
     padding-top: 0.6rem;
-    padding-bottom: 0.8rem;
+    padding-bottom: 0.5rem;
     white-space: nowrap;
     vertical-align: middle;
+
+    @include font-weight(bold)
 
     &:first-child {
       padding-right: 0.8rem;
@@ -18,13 +21,15 @@
   &__text {
     padding-top: 0.6rem;
     padding-right: 0.8rem;
-    padding-bottom: 0.8rem;
+    padding-bottom: 0.5rem;
     text-align: left;
     vertical-align: middle;
   }
 
   &__school-choice {
-    font-style: italic;
+    font-style: normal;
+    color: #02b3cd !important;
+    font-size: 1.5rem;
 
     &:hover {
       text-decoration: underline;
