--- a/taui/src/sass/06_components/_neighborhood-summary.scss
+++ b/taui/src/sass/06_components/_neighborhood-summary.scss
@@ -1,7 +1,7 @@
 .neighborhood-summary {
   @include elevation(1);
   margin-bottom: 1.6rem;
-  padding: 0 0.8rem 1.2rem;
+  // padding: 0 0.8rem 1.2rem;
   background-color: $white;
   cursor: pointer;
 
@@ -9,13 +9,16 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-start;
-    justify-content: flex-start;
-    padding: 1.6rem 0.4rem;
+    justify-content: flex-end;
+    padding-bottom: 1.6rem;
+
   }
 
   &__star {
-    margin-right: 0.8rem;
-    font-size: 1.8rem !important;
+    position: absolute;
+    margin-right: 1rem;
+    margin-top: 1rem;
+    font-size: 2.5rem !important;
   }
 
   &__marker {
@@ -29,12 +32,14 @@
   }
 
   &__name {
-    @include heading(400);
+    @include heading(450);
     display: flex;
     flex: auto;
     flex-flow: column nowrap;
     align-items: flex-start;
     margin-right: 0.8rem;
+    margin-left: 2rem;
+    margin-bottom: 1rem;
   }
 
   &__ecc {
@@ -49,34 +54,38 @@
     flex-flow: row nowrap;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 0 0.8rem;
+    padding: 0 2rem;
   }
 
   &__descriptive {
     flex: none;
     margin-right: 0.8rem;
+    margin-bottom: 1rem;
   }
 
   &__image {
-    width: 12rem;
-    height: 9rem;
+    width: 100%;
+    height: 17rem;
+    // position: absolute;
     margin-bottom: 0.8rem;
 
     img {
-      width: 120px;
-      height: 90px;
+      width: 100%;
+      height: 100%;
+      color: #fff;
     }
   }
 
   &__trip {
     display: flex;
     flex-flow: column nowrap;
-    align-items: center;
+    align-items: left;
     justify-content: flex-start;
   }
 
   &__duration {
     @include text(400);
+    margin-bottom: 1rem;
   }
 
   &__trajectory {
