--- a/taui/src/sass/06_components/_app-header.scss
+++ b/taui/src/sass/06_components/_app-header.scss
@@ -41,8 +41,8 @@
   }
 
   &__user-name {
+    @include font-weight(bold);
     margin-right: 1.6rem;
-    @include font-weight(bold)
   }
 
   &__voucher-number {
