--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -21,8 +21,8 @@
   }
 
   &__star {
-    position: absolute;
-    margin-top: 1rem;
+    float: right;
+    margin-top: 0.5rem;
     margin-right: 1rem;
     font-size: 2.5rem !important;
   }
@@ -30,8 +30,9 @@
   &__name {
     display: flex;
     flex: auto;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
     align-items: flex-start;
+    justify-content: space-between;
     margin-right: 0.8rem;
     padding-left: 1.6rem;
   }
