--- a/taui/src/sass/06_components/_neighborhood-summary.scss
+++ b/taui/src/sass/06_components/_neighborhood-summary.scss
@@ -13,8 +13,7 @@
   }
 
   &__star {
-    position: absolute;
-    margin-top: 1rem;
+    float: right;
     margin-right: 1rem;
     font-size: 2.5rem !important;
   }
@@ -33,8 +32,9 @@
     @include heading(450);
     display: flex;
     flex: auto;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
     align-items: flex-start;
+    justify-content: space-between;
     margin-right: 0.8rem;
     margin-bottom: 1rem;
     margin-left: 2rem;
