Create TopBar and Listings redux flow
Add fetch error handling

--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -22,6 +22,7 @@
 '06_components/neighborhood-summary.scss',
 '06_components/neighborhood-details.scss',
 '06_components/rental-units-meter.scss',
+'06_components/top-bar.scss',
 '07_layouts/app-root.scss',
 '07_layouts/auth-screen.scss',
 '07_layouts/form-screen.scss',
